<resources>
    <string name="app_name">Exercise_14</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="user_lastname">User Lastname</string>
    <string name="age">Age</string>
    <string name="teacher">Teacher</string>
    <string name="add_user">Add User</string>
    <string name="update_user">update user</string>
    <string name="delete_user">delete user</string>
</resources>