<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".registration.RegistrationFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:hint="@string/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastname"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:hint="@string/user_lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etName"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAge"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:hint="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_marginTop="10dp"
        android:hint="@string/teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/etAge"
        app:layout_constraintTop_toBottomOf="@id/etLastname"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddUser"
        android:layout_marginTop="15dp"
        android:text="@string/add_user"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/add_user_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAge"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="15dp"
        android:id="@+id/userRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddUser"
        tools:listitem="@layout/item_user_teacher"

        />

</androidx.constraintlayout.widget.ConstraintLayout>